# Inventory-Management-CLI-Tool

./: .gitignore  README.md
InventoryManager/: CMakeLists.txt  InventoryManager.sln
InventoryManager/Dependencies/sqlite/lib/: sqlite3.lib
InventoryManager/InventoryManager/: InventoryManager.vcxproj  InventoryManager.vcxproj.filters  inventory.db
InventoryManager/InventoryManager/src/: Application.cpp  DatabaseManager.cpp  DatabaseManager.h  InventoryManager.cpp  InventoryManager.h
InventoryManager/InventoryManager/x64/Debug/: InventoryManager.exe.recipe  vc143.idb
InventoryManager/InventoryManager/x64/Debug/InventoryManager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  InventoryManager.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
